--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>oclock</title>
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -34,6 +35,8 @@
 
   </div>
 
+  <p></p>
+  <span></span>
   <script src="main.js"></script>
 </body>
 
